--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ h1, h2, h3, h4, h5, h6{
     margin: 0 auto;
     padding: 0 20px;
 }
+
+
+.items{
+    box-shadow: 0px 13px 26px 0px #00000012;
+}
